Changed UI layout (moved buttons to the bottom). Changed frequency functions to return list of objects. Added functions to display frequency objects as a list or as an ascii graph.

--- a/CryptoWorkbench/CryptoWorkbench/CryptoWorkbench.ui
+++ b/CryptoWorkbench/CryptoWorkbench/CryptoWorkbench.ui
@@ -37,31 +37,7 @@ QSplitter::handle {
 	background-color: #2d2d30;
 }</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>300</y>
-      <width>151</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>60</y>
-      <width>311</width>
-      <height>171</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
+  <widget class="QWidget" name="centralWidget"/>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
